--- a/src/languages/fr.json
+++ b/src/languages/fr.json
@@ -5,6 +5,8 @@
 
     "settings-title" : "Paramètres du jeu",
     "settings-score" : "Rendre le score visible",
+    "settings-teambuildlogo": "Changez le logo de Team Building",
+    "settings-clientlogo": "Changez le logo du client",
 
     "number-players-title" : "Nombre de joueurs",
     "number-players-entry-text" : "Entrez le nombre de joueurs",
